--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>PreEntrega1-RuizRivera</title>
+    <title>ProyectoFinal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
